# HyperDrive

./: .gitignore  config.toml  readme.md  routes.txt
backend/: config.py  exc_handlers.py  exceptions.py  main.py  pyproject.toml  schemes.py  utils.py
backend/database/: actions.py  auth.py  bases.py  files.py  folders.py  session.py
backend/permission/: dependencies.py  jwt.py
backend/routes/: actions.py  auth.py  files.py  folders.py
backend/services/: auth.py  files.py  folders.py
frontend/: TODO.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/fileExplorer/: FileExplorer.tsx  FileList.tsx  FileToolbar.tsx
frontend/src/components/files/: ContextMeneu.tsx  FileExplorer.tsx  FileList.tsx  FileToolbar.tsx
frontend/src/components/layout/: ContextMenu.tsx  NavBar.tsx  SideBar.tsx
frontend/src/hooks/: closeOnOutside.ts
frontend/src/pages/: HomePage.tsx  LoginPage.tsx
frontend/src/pages/errors/: NotFound.tsx
frontend/src/store/: contextMenu.ts  fileExplorer.ts  selectedFileItems.ts  sortSettings.ts
frontend/src/types/: contextMenu.ts  contextMenu.tsx  fileExplorer.ts  fileExplorer.tsx  sort.tsx  sortSettings.ts
frontend/src/utils/: fileIcon.tsx  sizeFormat.tsx
